fix main page align error

--- a/client/src/components/Landing/Main/Main.scss
+++ b/client/src/components/Landing/Main/Main.scss
@@ -67,6 +67,7 @@ main {
 
     p {
       color: #7d7f29;
+      text-align: center;
     }
     .team-icon {
       background: url("../../../images/team/poke.gif") white center;
